<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/avatarImage"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/stargazerName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        tools:text="Subito10" />
</LinearLayout>